# XS4GCRv2

./: .gitignore  .makeit  CMakeLists.txt  README.md
apps/: crFlux.cpp  cramsFragmentation.cpp  cramsInelastic.cpp  crams_common.h  decay.cpp  frag_table.cpp  gammas.cpp  hermesNeutrals.cpp  hermesTables.cpp  inelastic.cpp  lightSourceTerm.cpp  lightXsecs.cpp  qism.cpp  sandbox.cpp  secAntiprotons.cpp  secGammas.cpp  secLeptons.cpp  terProtons.cpp  testBreakGammas.cpp
cmake/: XS4GCRConfig.cmake.in
data/: Feng2016_EPOS_LHC_antiprotons.txt  Feng2016_EPOS_antiprotons.txt  Feng2016_QGSJET04_antiprotons.txt  Winkler2017_antiprotons.txt  crams_nucleilist.csv  espectra_eminus.decay.he.matrix.final.data  espectra_eplus.decay.he.matrix.final.data  nucleiRadii_Adani2013.txt
data/Evoli2026/: ghost_list_IAEA2026.txt
data/Feng2016/: Feng2016_DIMAURO_antiprotons.txt  Feng2016_QGSJET_antiprotons.txt
data/HuangPohl2007/: espectra_eminus.decay.p.matrix.final.data  espectra_eplus.decay.p.matrix.final.data  prodxsection.he.matrix.final.data  prodxsection.p.matrix.final.data
data/aafrag202/: AAfrag202.f90  AAfrag202.py  Makefile  README.md  user202.f90
data/aafrag202/Tables/: README.md
examples/: antiprotons.cpp  inelastic.cpp  leptons.cpp
include/: XS4GCR.h
include/XS4GCR/: XS4GCR.h  cgs.h  common.h  git_revision.h  grid.h  gsl.h  logging.h  nucleiChart.h  pid.h  utilities.h
include/XS4GCR/antiprotons/: AAfrag.h  AAfragSecAp.h  DiMauro2014.h  Duperray2003.h  Feng2016.h  Korsmeier2018.h  SecondaryAntiprotons.h  TanNg1983.h  Winkler2017.h
include/XS4GCR/core/: XSecModel.h  cgs.h  common.h  fit_data.h  fitting_functions.h  ghost_tree.h  grid.h  gsl.h  lis.h  logging.h  nucleiChart.h  pid.h  utilities.h  xsecs.h
include/XS4GCR/fragmentations/: Evoli2026.h  Fluka4Dragon.h  UsineFragmentation.h  Webber1993.h  fragmentations.h
include/XS4GCR/gammas/: AAfragSecGammas.h  Kafexhiu2014.h  Kamae2006.h  Kelner2006.h  Pi0Gammas.h
include/XS4GCR/inelastic/: CROSEC.h  Glauber.h  Letaw1983.h  TotalInelastic.h  Tripathi1999.h  inelastic.h
include/XS4GCR/leptons/: AAfrag.h  AAfragSecLeptons.h  HuangPohl2007.h  Kamae2006.h  Orusa2022.h  SecondaryLeptons.h
include/XS4GCR/models/: apDiMauro14.h  apDuperray03.h  apTanNg83.h  gammaKafexhiu14.h  gammaKelner06.h  inTripathi99.h  secAAfrag101.h  secKamae06.h
include/XS4GCR/neutrals/: AAfragSecNeutrals.h  Kafexhiu2014.h  Kamae2006.h  Kelner2006.h  SecondaryNeutrals.h
include/XS4GCR/nuclei/: AAfragSecNuclei.h  SecondaryNuclei.h
include/XS4GCR/shared/: secAAfrag101.h  secAAfrag202.h  secKamae06.h
include/XS4GCR/tertiary/: AAfragTerProtons.h  TertiaryProtons.h
plots/: CRDB_H_AMS02_2015.txt  CRDB_He_AMS02_2017.txt  CRDB_antimatter_ratio_AMS02_2016.txt  CRDB_pbar_AMS02_2016.txt  CRDB_pos_AMS02_2019.txt  plot_Glauber.py  plot_aafrag.py  plot_all_inelasticity.py  plot_all_sourceterm.py  plot_antiprotons.py  plot_antiprotons_xsecs.py  plot_ap.py  plot_crflux.py  plot_gammas.py  plot_gammas_ISM_sourceterm.py  plot_gammas_inelasticity.py  plot_gammas_sourceterm.py  plot_gammas_xsecs.py  plot_inelastic.py  plot_neutrinos_ISM_sourceterm.py  plot_neutrinos_inelasticity.py  plot_neutrinos_xsecs.py  plot_positrons.py  plot_positrons_xsecs.py  plot_tertiary_xsecs.py  plot_testbreak.py  plot_xsecs_inelastic.py
src/: XS4GCR.cpp  common.cpp  gsl.cpp  nucleiChart.cpp  utilities.cpp
src/antiprotons/: AAfrag.cpp  AAfragSecAp.cpp  DiMauro2014.cpp  Duperray2003.cpp  Feng2016.cpp  Korsmeier2018.cpp  SecondaryAntiprotons.cpp  TanNg1983.cpp  Winkler2017.cpp
src/core/: common.cpp  fitting_functions.cpp  ghost_tree.cpp  lis.cpp  nucleiChart.cpp  utilities.cpp  xsecs.cpp
src/fragmentations/: Evoli2026.cpp  Fluka4Dragon.cpp  UsineFragmentation.cpp  UsineFragmentationTables.cpp  Webber1993.cpp
src/gammas/: AAfragSecGammas.cpp  Kafexhiu2014.cpp  Kamae2006.cpp  Kelner2006.cpp
src/inelastic/: CROSEC.cpp  Glauber.cpp  Letaw1983.cpp  Tripathi1999.cpp
src/leptons/: AAfrag.cpp  AAfragSecLeptons.cpp  HuangPohl2007.cpp  Kamae2006.cpp  Orusa2022.cpp  SecondaryLeptons.cpp
src/models/: apDiMauro14.cpp  apDuperray03.cpp  apTanNg83.cpp  gammaKafexhiu14.cpp  gammaKelner06.cpp  inTripathi99.cpp  secAAfrag101.cpp  secKamae06.cpp
src/neutrals/: AAfragSecNeutrals.cpp  Kafexhiu2014.cpp  Kamae2006.cpp  Kelner2006.cpp
src/nuclei/: AAfragSecNuclei.cpp
src/shared/: secAAfrag101.cpp  secAAfrag202.cpp  secKamae06.cpp
src/tertiary/: AAfragTerProtons.cpp
